[package]
name = "clipcrab"
version = "0.1.0"
edition = "2024"

[dependencies]
getopt = "1.1.7"
getopt-long = "0.3.0"
log = "0.4.27"
shellexpand = "3.1.1"
simplelog = "0.12.2"
toml = "0.8.21"
wl-clipboard-rs = "0.9.2"
tokio = { version = "1.45.0", features = ["full"] }
secret-service = { version = "5.0.0", features = ["rt-tokio-crypto-rust"] }
openssl = "0.10.72"
